Make build Java 9+ compatible